# poetry-demo

./: pyproject.toml
poetry_demo/: main.py
